# Vinted

./: CMakeLists.txt  ReadME.txt  main.cpp
ShipmentDiscountCalculation_lib/: CMakeLists.txt  functions.cpp  functions.h
UnitTests/: CMakeLists.txt  Tests.cpp
UnitTests/lib/.github/ISSUE_TEMPLATE/: 00-bug_report.yml
UnitTests/lib/docs/: advanced.md  gmock_cook_book.md
UnitTests/lib/googlemock/: CMakeLists.txt
UnitTests/lib/googlemock/include/gmock/: gmock-actions.h  gmock-cardinalities.h  gmock-function-mocker.h  gmock-matchers.h  gmock-more-actions.h  gmock-more-matchers.h  gmock-nice-strict.h  gmock-spec-builders.h  gmock.h
UnitTests/lib/googlemock/include/gmock/internal/: gmock-internal-utils.h  gmock-port.h
UnitTests/lib/googlemock/include/gmock/internal/custom/: gmock-generated-actions.h  (+2 more)
UnitTests/lib/googlemock/test/: gmock-internal-utils_test.cc
UnitTests/lib/googletest/cmake/: internal_utils.cmake
UnitTests/lib/googletest/include/gtest/: gtest-assertion-result.h  gtest-death-test.h  gtest-matchers.h  gtest-message.h  gtest-param-test.h  gtest-printers.h  gtest-test-part.h  gtest-typed-test.h  gtest.h  gtest_pred_impl.h
UnitTests/lib/googletest/include/gtest/internal/: gtest-death-test-internal.h  gtest-filepath.h  gtest-internal.h  gtest-param-util.h  gtest-port-arch.h  gtest-port.h  gtest-string.h  gtest-type-util.h
UnitTests/lib/googletest/samples/: sample6_unittest.cc
UnitTests/lib/googletest/src/: gtest-port.cc  gtest-printers.cc  gtest.cc
UnitTests/lib/googletest/test/: googletest-filepath-test.cc  googletest-options-test.cc
